<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="InconsistentArrays">
    <string name="app_name">Rafik</string>
    <string name="rafik">Rafik</string>
    <string name="rafik_phone_number">+201093111955</string>
    <string name="organic_fertilizer">Organic Fertilizer</string>
    <string name="organic_products_manufacture_training">Organic Products manufacturing Training</string>
    <string name="contact_us">Contact us</string>
    <string name="product_for_sale">Product for sale</string>
    <string name="land_area">Land Area</string>
    <string name="cultivation_or_crop_type">Cultivation or Crop type</string>
    <string name="type_of_fertilizer_required">The type of Fertilizer required</string>
    <string name="send_request">send request</string>
    <string name="product_type">Product type</string>
    <string name="training_places">Training places</string>
    <string name="trainings">Trainings</string>

    <string-array name="product_types">
        <item>دبس رمان</item>
        <item>دبس تمر</item>
        <item>طماطم مجففة</item>
        <item>بصل مجفف</item>
        <item>ثوم مجفف</item>
        <item>سيرب نعناع</item>
        <item>زيت زيتون</item>
        <item>زيت نعناع</item>
        <item>مانجو مخللة</item>
    </string-array>

    <string-array name="training_places">
        <item>القاهرة</item>
        <item>الجيزة</item>
        <item>القليوبية</item>
        <item>الإسكندرية</item>
        <item>البحيرة</item>
        <item>مطروح</item>
        <item>الساحل الشمالي</item>
        <item>كفر الشيخ</item>
        <item>الدقهلية</item>
        <item>الشرقية</item>
        <item>المنوفية</item>
        <item>دمياط</item>
        <item>بورسعيد</item>
        <item>الإسماعيلية</item>
        <item>السويس</item>
        <item>الشيخ زايد</item>
        <item>الفيوم</item>
        <item>بني سويف</item>
        <item>المنيا</item>
        <item>أسيوط</item>
        <item>سوهاج</item>
        <item>قنا</item>
        <item>أسوان</item>
        <item>الأقصر</item>
        <item>البحر الأحمر</item>
        <item>الوادي الجديد</item>
        <item>مطروح</item>
    </string-array>


    <string-array name="fertilizer_types">
        <item>كمبوست سائل متوازن</item>
        <item>كمبوست سائل عالي النيتروجين</item>
        <item>كمبوست سائل عالي الفوسفات</item>
        <item>كمبوست سائل عالي البوتاسيوم</item>
        <item>كمبوست</item>
        <item>مبيدات حيوية</item>
    </string-array>

    <string-array name="organic_crops_type">
        <item>رمان</item>
        <item>بلح</item>
        <item>نعناع</item>
        <item>بصل</item>
        <item>ثوم</item>
        <item>طماطم</item>
        <item>زيتون</item>
        <item>مانجو</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="sign_up">SIGN UP</string>
    <string name="username">Username</string>
    <string name="registration">Registration</string>
    <string name="todo">TODO</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="bias1">1.0</string>
    <string name="bias0">0.0</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="enter_your_address">Enter your ِAddress</string>
    <string name="enter_phone">Enter your Phone Number</string>
    <string name="lenght_phone_check">Enter 11 num Phone </string>
    <string name="verification_code">Verification Code</string>
    <string name="code_sent">code sent to </string>
    <string name="contian_11">Must Contain 11 Number</string>
    <string name="signout">signOut</string>
    <string name="verify_code">Verify Code</string>
    <string name="please_enter_code">Please enter Code</string>
    <string name="checkYourInternet">Check Your internet connection please</string>
    <string name="send_another_code">Send another code</string>
    <string name="yourInternetIsBack">Your Connection Is Back</string>
    <string name="acre">Acre</string>
    <string name="carat">Carat</string>
    <string name="error">Error</string>
    <string name="please_fill_the_area_field">"\nPleaseFill the Area Field "</string>
    <string name="please_fill_crop_type_field">\nPlease Fill Crop type Field</string>
    <string name="please_fill_fertilizer_type_field">\nPlease Fill Fertilizer type Field</string>
    <string name="okay">Okay</string>
    <string name="amount">Amount</string>
    <string name="price">Price</string>
    <string name="date">Date</string>
    <string name="target">Target</string>
    <string name="add_image">Add image (Optional)</string>
    <string name="production_date">Production Date</string>
    <string name="settings">Settings</string>

    <string-array name="target_type">
        <item>Local</item>
        <item>Export</item>
    </string-array>
    <string name="logout">Logout</string>
    <string name="app_v1_0_0">App v1.0.0</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="language">Language</string>
    <string name="english">ُEnglish</string>
    <string name="arabic">Arabic</string>
    <string name="confirmation">Confirmation</string>
    <string name="send_request_confirmation">Are you sure to send this request?</string>
    <string name="cancel">Cancel</string>
    <string name="please_fill_product_type_field">\nPlease fill Product type Field</string>
    <string name="please_fill_amount_field">\nPlease fill Amount Field</string>
    <string name="please_fill_address_field">\nPlease fill Address Field</string>
    <string name="please_fill_price_field">\nPlease fill Price Field</string>
    <string name="please_fill_production_date_field">\nPlease fill Production Date Field</string>
    <string name="remove_photo">delete photo</string>
    <string name="navigate_up_confirmation">Are you sure you want to go back?\nyou will lose all data you entered!</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">LogIn</string>
    <string name="signup">SignUp</string>
    <string name="join_now">Join Now</string>
    <string name="new_to_rafik">New to Rafik?</string>
    <string name="are_you_sure">Are you sure about this number</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="register">Register</string>
    <string name="type_of_fertilizer">Types of Fertilizer</string>
    <string name="organic_products">Organic Products</string>
    <string name="overview">Overview</string>
    <string name="home_screen">Home</string>
    <string name="_0">0</string>
    <string name="you_must_enter_a_value_per_carat_or_acre">You must enter a value per carat or acre</string>
    <string name="this_field_cannot_be_empty">This field cannot be empty</string>
    <string name="request_sent_successfully">Request sent Successfully</string>
    <string name="your_request_was_not_sent_please_try_again_later">Your request was not sent, please try again later</string>
    <string name="this_number_is_already_registered_try_to_log_in">This number is already registered,try to log in</string>
    <string name="this_number_is_not_registered_try_to_register">This number is not registered, try to register</string>
    <string name="the_verification_code_is_invalid">The verification code from SMS/TOTP is invalid, Please check and enter the correct verification code again.</string>
    <string name="an_error_occurred_try_again_later">An error occurred, try again later</string>


</resources>