<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.fertilizers.rafik.domian.entity.User" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.fertilizers.rafik.ui.settings.SettingsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/back_arrow"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/back_arrow3"
                android:layout_marginStart="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView7"
                style="@style/viewParent.headerText"
                android:layout_marginTop="@dimen/_24sdp"
                android:text="@string/settings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/back_arrow"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/usernameTextView"
                style="@style/viewParent.headerText"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/_24sdp"
                android:hint="@string/username"
                android:text="@{user.name}"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/textView7"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/phoneTextView"
                style="@style/viewParent.headerText"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:hint="@string/phone"
                android:text="@{user.phone}"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/usernameTextView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/usernameTextView"
                app:layout_constraintTop_toBottomOf="@+id/usernameTextView" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/darkModeSwitch"
                style="@style/settingsText"
                android:layout_marginTop="@dimen/_24sdp"
                android:drawableStart="@drawable/ic_dark_mode"
                android:paddingStart="@dimen/_30sdp"
                android:paddingEnd="@dimen/_30sdp"
                android:text="@string/dark_mode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneTextView" />

            <TextView
                android:id="@+id/textView8"
                style="@style/viewParent.headerText.settingsMiniTitle"
                android:layout_marginTop="@dimen/_24sdp"
                android:paddingStart="@dimen/_30sdp"
                android:paddingEnd="@dimen/_30sdp"
                android:text="@string/profile"
                app:layout_constraintEnd_toEndOf="@+id/darkModeSwitch"
                app:layout_constraintStart_toStartOf="@+id/darkModeSwitch"
                app:layout_constraintTop_toBottomOf="@+id/darkModeSwitch" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/profile_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:elevation="@dimen/_8sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_16sdp"
                app:cardElevation="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="@+id/textView8"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView8">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView9"
                        style="@style/viewParent.headerText.settingsTextIcon"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:text="@string/edit_profile"
                        app:drawableLeftCompat="@drawable/ic_edit_profile"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputName"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:visibility="gone"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:layout_marginBottom="@dimen/_16sdp"
                        app:helperText=""
                        app:helperTextTextColor="@color/md_red_400"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/save"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView9">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:autofillHints="Name"
                            android:hint="@string/username"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:text="@{user.name}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageView
                        android:id="@+id/save"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/save"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView9" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/textView10"
                style="@style/viewParent.headerText.settingsMiniTitle"
                android:layout_marginTop="@dimen/_24sdp"
                android:paddingStart="@dimen/_30sdp"
                android:paddingEnd="@dimen/_30sdp"
                android:text="@string/more"
                app:layout_constraintEnd_toEndOf="@+id/profile_card_view"
                app:layout_constraintStart_toStartOf="@+id/profile_card_view"
                app:layout_constraintTop_toBottomOf="@+id/profile_card_view" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/lang_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:background="@drawable/round3_button"
                android:elevation="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_16sdp"
                app:cardElevation="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="@+id/textView10"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView11"
                        style="@style/viewParent.headerText.settingsTextIcon"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:text="@string/language"
                        app:drawableLeftCompat="@drawable/ic_languages"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <RadioGroup
                        android:id="@+id/radio_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:padding="@dimen/_8sdp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView11">

                        <RadioButton
                            android:id="@+id/en"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/english" />

                        <RadioButton
                            android:id="@+id/ar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/arabic" />

                    </RadioGroup>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/logout"
                style="@style/viewParent.headerText.settingsTextIcon"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:text="@string/logout"
                app:drawableLeftCompat="@drawable/ic_logout"
                app:layout_constraintEnd_toEndOf="@+id/lang_card_view"
                app:layout_constraintStart_toStartOf="@+id/lang_card_view"
                app:layout_constraintTop_toBottomOf="@+id/lang_card_view" />

            <TextView
                style="@style/viewParent.headerText.settingsMiniTitle"
                android:paddingStart="@dimen/_30sdp"
                android:paddingEnd="@dimen/_30sdp"
                android:text="@string/app_v1_0_0"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/logout"
                app:layout_constraintStart_toStartOf="@+id/logout"
                app:layout_constraintTop_toBottomOf="@+id/logout"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>