<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_hexagon"
            android:layout_width="180dp"
            android:layout_height="170dp"
            android:layout_gravity="end"
            android:contentDescription="@android:string/ok"
            android:scaleType="fitXY"
            android:src="@drawable/artificial_plant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="@string/bias1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_32sdp"
            android:text="@string/registration"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintBottom_toBottomOf="@+id/img_hexagon"
            app:layout_constraintEnd_toStartOf="@+id/img_hexagon"
            app:layout_constraintHorizontal_bias="@string/bias0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/personalDetailsCard"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_hexagon">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    app:helperTextTextColor="@color/md_red_400"
                    app:helperText=""
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">

                    <EditText
                        android:id="@+id/editTextName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints="Name"
                        android:text="khph"
                        android:background="@drawable/round3_button"
                        android:hint="@string/username"
                        android:inputType="textPersonName"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:textSize="@dimen/_15ssp"
                    app:layout_constraintBottom_toBottomOf="@+id/city_rela"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textInputName"
                    app:layout_constraintTop_toTopOf="@+id/city_rela" />

                <RelativeLayout
                    android:id="@+id/city_rela"
                    android:layout_width="0dp"
                    android:layout_height="?attr/dropdownListPreferredItemHeight"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:background="@drawable/spinner_bg"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView5"
                    app:layout_constraintTop_toBottomOf="@+id/textInputName"
                    app:layout_constraintVertical_bias="0.0">

                    <Spinner
                        android:id="@+id/cities_spinner"
                        style="@style/Widget.AppCompat.Spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:dropDownWidth="match_parent"
                        android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
                        android:gravity="center"
                        android:popupElevation="3dp"
                        android:spinnerMode="dropdown"
                        android:stateListAnimator="@drawable/spinner_sla" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="end"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/drop"
                        tools:ignore="ImageContrastCheck" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/area"
                    android:textSize="@dimen/_15ssp"
                    app:layout_constraintBottom_toBottomOf="@+id/center_rela"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    app:layout_constraintTop_toTopOf="@+id/center_rela" />

                <RelativeLayout
                    android:id="@+id/center_rela"
                    android:layout_width="0dp"
                    android:layout_height="?attr/dropdownListPreferredItemHeight"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:background="@drawable/spinner_bg"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/city_rela"
                    app:layout_constraintVertical_bias="0.0">

                    <Spinner
                        android:id="@+id/centers_spinner"
                        style="@style/Widget.AppCompat.Spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:dropDownWidth="match_parent"
                        android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
                        android:gravity="center"
                        android:popupElevation="3dp"
                        android:spinnerMode="dropdown"
                        android:stateListAnimator="@drawable/spinner_sla" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="end"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/drop"
                        tools:ignore="ImageContrastCheck" />
                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    app:helperTextTextColor="@color/md_red_400"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:helperText=""
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/center_rela"
                    app:layout_constraintVertical_bias="0.0">

                    <EditText
                        android:id="@+id/editTextAddress"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="15 maycity cairo"
                        android:autofillHints="Name"
                        android:background="@drawable/round3_button"
                        android:hint="@string/address"
                        android:inputType="textPersonName"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    app:helperTextTextColor="@color/md_red_400"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:helperText=""
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputAddress"
                    app:layout_constraintVertical_bias="0.0">

                    <EditText
                        android:id="@+id/editTextPhone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints="Name"
                        android:text="01129891472"
                        android:background="@drawable/round3_button"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.apachat.loadingbutton.core.customViews.CircularProgressButton
                    android:id="@+id/registerButton"
                    style="@style/loginButton"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/login_button_bk"
                    android:text="@string/registration"
                    android:textColor="@color/white"
                    app:initialCornerAngle="27dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputPhone"
                    app:spinning_bar_color="#FFF"
                    app:spinning_bar_padding="6dp"
                    app:spinning_bar_width="4dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>